# rabbitmq_pika_adapter

./: .env  .gitignore  LICENSE  PROJECT_STATE.md  README.md  __init__.py  pyproject.toml  requirements.txt  run_tests_with_integration_env.cmd  run_tests_with_integration_env.sh
.github/: analysis.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: USAGE.md
examples/: usage.py
mq_adapters/: ApplicationThread.py  async_adapter.py  client.py  dead_lettering.py  helper_functions.py  log.py  publisher_pool.py  retry_policy.py  stats.py  sync_adapter.py  sync_publisher_backend.py
src/mq_adapters/: __init__.py  async_adapter.py  helper_functions.py  sync_adapter.py
tests/: conftest.py  test_async_dead_lettering_poison_unit.py  test_async_failure_modes_unit.py  test_async_integration.py  test_async_listener.py  test_async_reconnect_integration.py  test_async_sender.py  test_async_sender_confirms_integration.py  test_async_sender_retry_and_batching.py  test_client_facade.py  test_client_lightweight_sender_unit.py  test_context_management.py  test_dead_lettering_unit.py  test_imports.py  test_retry_policy_unit.py  test_serialization_hooks_unit.py  test_sync_listener_integration.py  test_sync_listener_offload_integration.py  test_sync_listener_offload_unit.py  test_sync_listener_process_data_events_unit.py  test_sync_publish_backend_unit.py  test_sync_publisher_pool_pooling_unit.py
