[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitmq-pika-adapter"
version = "0.1.0"
description = "Lightweight RabbitMQ client helpers (blocking/pika) with Sender and Listener utilities."
readme = "README.md"
authors = [
    { name = "Yunus Indori", email = "yicodes2020@gmail.com" }
]
maintainers = [
    { name = "Yunus Indori", email = "yicodes2020@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["rabbitmq", "amqp", "pika", "aio-pika", "messaging"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

dependencies = [
    "pika>=1.2.0",
]

[project.optional-dependencies]
async = [
    "aio-pika>=9.4.0",
]

test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

dev = [
    "mypy>=1.8",
]

[project.urls]
"Homepage" = "https://github.com/yunusindori1/rabbitmq_pika_adapter"
"Repository" = "https://github.com/yunusindori1/rabbitmq_pika_adapter"
"Issues" = "https://github.com/yunusindori1/rabbitmq_pika_adapter/issues"

# ---- Packaging (src layout) ----
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mq_adapters*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: integration tests that require live RabbitMQ",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true

# Baseline should not force annotations on locals/attributes yet.
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Explicit list of library modules (avoid picking up demo/test scripts).
files = [
  "src/mq_adapters/__init__.py",
  "src/mq_adapters/client.py",
  "src/mq_adapters/helper_functions.py",
  "src/mq_adapters/publisher_pool.py",
  "src/mq_adapters/async_adapter.py",
]

# Third-party packages often lack stubs; keep noise low.
[[tool.mypy.overrides]]
module = ["pika.*", "aio_pika.*"]
ignore_missing_imports = true
